Changed colors of fixedComposition elements. Added new parent component to hold all instances of fixedComposition called arrangement. In the future you will be able to have multiple arrangements or songs. playChord function changed so that notes dont overlap when spamming play button. Moved numMeasures and widthMeasures so that they are changed once and it changes all composition componenets in arrangement component.

--- a/globals.css
+++ b/globals.css
@@ -1,8 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/fix this ^^^^
+
 :root {
     --background: black; /* Light background */
     --foreground: #111827; /* Dark text */
   }
+
+/* Remove spinner controls in Chrome, Safari, Edge, Opera */
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Remove spinner controls in Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
